Support indexed query parameters (#130)
* support indexed query parameters

* speed up query tests

* add documentation about binNames array query param format

---------

Co-authored-by: Jesse Schmidt <jschmidt@aerospike.com>